[gd_scene load_steps=61 format=2]

[ext_resource path="res://Models/Evil Wizard/Sprites/Idle.png" type="Texture" id=1]
[ext_resource path="res://Models/Evil Wizard/Sprites/Attack.png" type="Texture" id=2]
[ext_resource path="res://Codes/Evil Wizard.gd" type="Script" id=3]
[ext_resource path="res://Models/Evil Wizard/Sprites/Move.png" type="Texture" id=4]
[ext_resource path="res://Models/Evil Wizard/Sprites/Take Hit.png" type="Texture" id=5]
[ext_resource path="res://Models/Evil Wizard/Sprites/Death.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 15.5, 25.75 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=73]
animations = [ {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=37]
resource_name = "Attack"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/DamageArea:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=74]
resource_name = "Death"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/DamageArea:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=75]
resource_name = "Hurt"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/DamageArea:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=38]
resource_name = "Idle"
length = 1.05
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/DamageArea:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=76]
resource_name = "Move"
length = 1.05
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/DamageArea:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=39]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/DamageArea:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=77]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=78]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=79]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=81]
animation = "Move"

[sub_resource type="AnimationNodeStateMachineTransition" id=84]

[sub_resource type="AnimationNodeStateMachineTransition" id=85]

[sub_resource type="AnimationNodeStateMachineTransition" id=86]
advance_condition = "IsDead"

[sub_resource type="AnimationNodeStateMachineTransition" id=87]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=88]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=82]
states/Attack/node = SubResource( 77 )
states/Attack/position = Vector2( 562, 48 )
states/Death/node = SubResource( 78 )
states/Death/position = Vector2( 572, 298 )
states/Hurt/node = SubResource( 79 )
states/Hurt/position = Vector2( 287, 121 )
states/Move/node = SubResource( 81 )
states/Move/position = Vector2( 562, 161 )
transitions = [ "Move", "Attack", SubResource( 84 ), "Move", "Hurt", SubResource( 85 ), "Move", "Death", SubResource( 86 ), "Hurt", "Move", SubResource( 87 ), "Attack", "Move", SubResource( 88 ) ]
start_node = "Move"
end_node = "Death"
graph_offset = Vector2( -24, -75.6827 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=83]

[sub_resource type="RectangleShape2D" id=89]
extents = Vector2( 52, 25.5 )

[sub_resource type="RectangleShape2D" id=90]
extents = Vector2( 27.5, 18 )

[node name="Evil Wizard" type="KinematicBody2D" groups=["Enemies"]]
script = ExtResource( 3 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 0.5 )
shape = SubResource( 35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 73 )
animation = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 37 )
anims/Death = SubResource( 74 )
anims/Hurt = SubResource( 75 )
anims/Idle = SubResource( 38 )
anims/Move = SubResource( 76 )
anims/RESET = SubResource( 39 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 82 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 83 )
parameters/conditions/IsDead = false

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16, 24 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="HitArea" type="Area2D" parent="."]

[node name="HitArea" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 35, 0.5 )
shape = SubResource( 89 )

[node name="Area2D" type="Area2D" parent="."]

[node name="DamageArea" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 36.5, 1 )
shape = SubResource( 90 )

[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
